--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+        <script src="https://o.alicdn.com/appflow/chatbot/v1/AppflowChatSDK.js"></script>
+<script>
+    window.APPFLOW_CHAT_SDK.init({
+    integrateConfig: {
+        integrateId: 'cit-623ebc0d2f4b4279bf06',
+        domain: {
+            requestDomain: 'http://ai.wetools.wctw.fun'
+            },
+            draggable: true,//是否可拖拽
+          }
+        });
+      </script>
 
     <!-- 可选: 百度统计/Google Analytics 代码 -->
     <!-- <script>
