--- a/index.html
+++ b/index.html
@@ -2,21 +2,10 @@
 <html lang="zh">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      href="https://img.alicdn.com/tfs/TB1_ZXuNcfpK1RjSZFOXXa6nFXa-32-32.ico"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>示例网站</title>
-    <link
-      href="//g.alicdn.com/??aliyun/dbl-official-ui/2.0.1/css/index.css,dawn/ace-element/0.0.60/index.css,hmod/ace-grid-layout-2023/0.0.5/index.css"
-      rel="stylesheet"
-    />
-    <link
-      href="//g.alicdn.com??code/npm/@ali/hmod-ace-2023-box/0.1.0/index.css,code/npm/@ali/hmod-ace-2023-service-contact-us/0.0.24/index.css,code/npm/@ali/hmod-aliyun-com-floating-toolbar/0.1.6/index.css,code/npm/@ali/hmod-aliyun-com-global-nav-search/0.5.10/index.css,code/npm/@ali/hmod-aliyun-com-global-nav/0.1.20/index.css,hmod/ace-2023-homepage-banner/0.1.11/index.css,hmod/ace-2023-homepage-news/0.1.5/index.css,hmod/ace-common-aliyun-index-title/0.0.4/index.css,hmod/ace-common-row-aliyun-free-trial/0.0.4/index.css,hmod/ace-common-row-aliyun-standard/0.0.8/index.css,hmod/ace-common-row-basic-product-datas/0.0.6/index.css,hmod/ace-common-row-entry-alicloud-service/0.0.6/index.css,hmod/ace-customer-case-home/0.1.1/index.css,hmod/ace-dpl-home-map/0.1.0/index.css,hmod/ace-dpl-home-product-category/0.1.0/index.css,hmod/ace-dpl-home-row-best-practices/0.0.10/index.css,hmod/ace-dpl-new-to-link/0.0.8/index.css,hmod/ace-homepage-2020-hmod-footer/0.1.5/index.css,hmod/ace-index-card-product-trial-service/0.0.5/index.css"
-      rel="stylesheet"
-    />
+    <meta name="baidu-site-verification" content="codeva-jpGfkuw9an" />
+    <meta name="msvalidate.01" content="EBB4F288DE9A362B19A8EB1D152EE9D2" />
     <!-- 谷歌广告 -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6024036052674886"
      crossorigin="anonymous"></script>
@@ -65,260 +54,6 @@
     </script>
   </head>
   <body>
-    <script src="https://o.alicdn.com/appflow/chatbot/v1/AppflowChatSDK.js"></script>
-    <script>
-      window.APPFLOW_CHAT_SDK.init({
-        integrateConfig: {
-          integrateId: 'cit-623ebc0d2f4b4279bf06',
-          domain: {
-            requestDomain: 'http://ai.wetools.wctw.fun'
-          },
-          draggable: true, // 是否可拖拽
-        }
-      });
-    </script>
-
-    <div id="0ee484795a0fc38d000ea4dedd6c41e1" style="height: 100%">
-      <div class="_18a32969382a277c44015217fbc5cb5a_box">
-        <div
-          class="_049c53001acd67530117521fe2424c48_fixed-placeholder"
-          style="height: 64px"
-        >
-          <div class="_049c53001acd67530117521fe2424c48_fixed">
-            <div
-              class="_049c53001acd67530117521fe2424c48_pc _19209c1e32439ee40d7a4f1131eeff34_theme _6dae2e91c729819b6bc7c3b1cbbd18be_reset"
-              data-ai-assistant-text-selection-tooltip="disabled"
-            >
-            </div>
-          </div>
-        </div>
-        <div
-          class="_049c53001acd67530117521fe2424c48_mobile _19209c1e32439ee40d7a4f1131eeff34_theme _6dae2e91c729819b6bc7c3b1cbbd18be_reset"
-        ></div>
-        <div class="_18a32969382a277c44015217fbc5cb5a_box"></div>
-      </div>
-      <div>
-        <div class="ace-2023-homepage-banner">
-          <div class="banner-container">
-            <div class="banner-frames">
-              <a
-                class="banner-frame active loading"
-                style="
-                  --pc-background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAAXNSR0IArs4c6QAAAAtJREFUGFdjYAACAAAFAAGq1chRAAAAAElFTkSuQmCC);
-                  --h5-background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAAXNSR0IArs4c6QAAAAtJREFUGFdjYAACAAAFAAGq1chRAAAAAElFTkSuQmCC);
-                  --background-color: rgb(245, 245, 246);
-                "
-                target="_blank"
-              >
-                <div
-                  class="left-mask"
-                  style="
-                    background-image: linear-gradient(
-                      90deg,
-                      rgba(245, 245, 246, 1) 0%,
-                      rgba(245, 245, 246, 0) 100%
-                    );
-                  "
-                ></div>
-                <div
-                  class="right-mask"
-                  style="
-                    background-image: linear-gradient(
-                      -90deg,
-                      rgba(245, 245, 246, 1) 0%,
-                      rgba(245, 245, 246, 0) 100%
-                    );
-                  "
-                ></div>
-                <div
-                  class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_grid banner-content"
-                  style="--col-padding: 24px; --m-col-padding: 16px"
-                >
-                  <div
-                    class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-9 _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_m-col-12"
-                  >
-                    <div class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-inner">
-                      <div class="banner-title" style="color: black;">Hello World!</div>
-                      <p class="banner-desc">
-                        █████████████████████████████<br />██████
-                      </p>
-                    </div>
-                  </div>
-                  <div
-                    class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-3 _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_m-col-0"
-                  >
-                    <div
-                      class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-inner"
-                    ></div>
-                  </div>
-                  <div
-                    class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-3 _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_m-col-12"
-                  >
-                    <div
-                      class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-inner banner-btn-container"
-                    >
-                      <button class="banner-btn">
-                        █ █ █ █<i
-                          class="ef2c5a73b903271fcd7fb37f72dd8429_icon _82242c2d9b7279d2cadaaba7b55999b3-go-to-link arrow"
-                        ></i>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div
-              class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_grid banner-switch-container"
-              style="
-                --duration: 4000ms;
-                --col-padding: 24px;
-                --m-col-padding: 16px;
-              "
-            >
-              <div
-                class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-12 _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_m-col-12"
-              >
-                <div class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-inner items">
-                  <a class="switch-item active loading" target="_blank"
-                    ><span class="progress-bar"></span
-                    ><span class="name">███████</span></a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div
-            class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_grid quick-entries"
-            style="--col-padding: 24px; --m-col-padding: 16px"
-          >
-            <div
-              class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-3 _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_m-col-6 _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_extend-left quick-entries-item"
-            >
-              <div class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-inner">
-                <a class="loading" target="_blank"
-                  >██████<i
-                    class="ef2c5a73b903271fcd7fb37f72dd8429_icon _82242c2d9b7279d2cadaaba7b55999b3-go-to-link icon"
-                  ></i
-                ></a>
-              </div>
-            </div>
-            <div
-              class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-3 _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_m-col-6 quick-entries-item"
-            >
-              <div class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-inner">
-                <a class="loading" target="_blank"
-                  >██████<i
-                    class="ef2c5a73b903271fcd7fb37f72dd8429_icon _82242c2d9b7279d2cadaaba7b55999b3-go-to-link icon"
-                  ></i
-                ></a>
-              </div>
-            </div>
-            <div
-              class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-3 _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_m-col-6 quick-entries-item"
-            >
-              <div class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-inner">
-                <a class="loading" target="_blank"
-                  >██████<i
-                    class="ef2c5a73b903271fcd7fb37f72dd8429_icon _82242c2d9b7279d2cadaaba7b55999b3-go-to-link icon"
-                  ></i
-                ></a>
-              </div>
-            </div>
-            <div
-              class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-3 _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_m-col-6 _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_extend-right quick-entries-item"
-            >
-              <div class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-inner">
-                <a class="loading" target="_blank"
-                  >██████<i
-                    class="ef2c5a73b903271fcd7fb37f72dd8429_icon _82242c2d9b7279d2cadaaba7b55999b3-go-to-link icon"
-                  ></i
-                ></a>
-              </div>
-            </div>
-          </div>
-          <div class="hot">
-            <div
-              class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_grid"
-              style="--col-padding: 0; --m-col-padding: 0"
-            >
-              <div
-                class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-9 _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_m-col-12"
-              >
-                <div class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-inner"></div>
-              </div>
-              <div
-                class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-3 _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_m-col-12 _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_extend-right panel"
-              >
-                <div class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-inner">
-                  <h2 class="title"></h2>
-                  <div
-                    class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_grid list"
-                    style="--col-padding: 24px; --m-col-padding: 16px"
-                  >
-                    <div
-                      class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-12 _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_m-col-6 item"
-                    >
-                      <div
-                        class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-inner item-inner"
-                      >
-                        <a class="loading" target="_blank"
-                          ><i
-                            class="_9c537ae05e4532e9960bd471bc577555_icon icon"
-                          ></i
-                          >██████████████</a
-                        >
-                      </div>
-                    </div>
-                    <div
-                      class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-12 _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_m-col-6 item"
-                    >
-                      <div
-                        class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-inner item-inner"
-                      >
-                        <a class="loading" target="_blank"
-                          ><i
-                            class="_9c537ae05e4532e9960bd471bc577555_icon icon"
-                          ></i
-                          >██████████████</a
-                        >
-                      </div>
-                    </div>
-                    <div
-                      class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-12 _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_m-col-6 item"
-                    >
-                      <div
-                        class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-inner item-inner"
-                      >
-                        <a class="loading" target="_blank"
-                          ><i
-                            class="_9c537ae05e4532e9960bd471bc577555_icon icon"
-                          ></i
-                          >██████████████</a
-                        >
-                      </div>
-                    </div>
-                    <div
-                      class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-12 _0f66d3b5ee87e0fc1c75a6eb5a2b8fde_m-col-6 item"
-                    >
-                      <div
-                        class="_0f66d3b5ee87e0fc1c75a6eb5a2b8fde_col-inner item-inner"
-                      >
-                        <a class="loading" target="_blank"
-                          ><i
-                            class="_9c537ae05e4532e9960bd471bc577555_icon icon"
-                          ></i
-                          >██████████████</a
-                        >
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 
