--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <!-- Open Graph (Facebook/LinkedIn 分享优化) -->
     <meta property="og:title" content="WE Tools - 全球优质效率工具导航平台" />
     <meta property="og:description" content="发现全球高效免费工具！WE Tools 提供办公、设计、开发领域的精选软件与网站导航，一站式提升您的工作效率。" />
-    <meta property="og:image" content="https://wetools.wctw.fun/images/og-social-share.png" />
-    <meta property="og:url" content="https://wetools.wctw.fun" />
+    <meta property="og:image" content="https://wetools.wctw.top/images/og-social-share.png" />
+    <meta property="og:url" content="https://wetools.wctw.top" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="WE Tools" />
 
@@ -34,7 +34,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="WE Tools - 全球优质效率工具导航平台" />
     <meta name="twitter:description" content="发现全球高效免费工具！WE Tools 提供办公、设计、开发领域的精选软件与网站导航，一站式提升您的工作效率。" />
-    <meta name="twitter:image" content="https://wetools.wctw.fun/images/twitter-social-share.png" />
+    <meta name="twitter:image" content="https://wetools.wctw.top/images/twitter-social-share.png" />
     <meta name="twitter:site" content="@YourTwitterHandle" /> <!-- 替换为你的 Twitter 账号 -->
 
     <!-- 结构化数据增强 SEO -->
@@ -47,7 +47,7 @@
       "description": "全球优质效率工具导航平台，提供免费软件与实用网站的一站式发现服务。",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://wetools.wctw.fun/search?q={search_term}",
+        "target": "https://wetools.wctw.yop/search?q={search_term}",
         "query-input": "required name=search_term"
       }
     }
