--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "WE Tools",
-      "url": "https://wetools.wctw.fun",
+      "url": "https://wetools.wctw.top",
       "description": "全球优质效率工具导航平台，提供免费软件与实用网站的一站式发现服务。",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://wetools.wctw.yop/search?q={search_term}",
+        "target": "https://wetools.wctw.top/search?q={search_term}",
         "query-input": "required name=search_term"
       }
     }
